# MegaDetector-Overhead

./: .gitignore  404.html  INSTALL.md  Makefile  NOTICE  README.md  citation.cff  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tags.json
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: update-lock.yml
animaloc/data/: patches.py  transforms.py
animaloc/datasets/: csv.py  folder.py
animaloc/eval/: __init__.py  evaluators.py  lmds.py  metrics.py  per_source_evaluator.py  similarity_refinement_pipeline.py  similarity_stitcher.py  similarity_utils.py  stitchers.py
animaloc/models/: __init__.py  dla.py  herdnet_detection_branch.py  herdnet_dinov2.py  herdnet_hybrid_multiscale_residual.py  owl_c.py  owl_d.py  owl_t.py  utils.py
animaloc/registry/: __init__.py  families.py
animaloc/train/: __init__.py  trainers.py  two_stage_trainer.py
animaloc/train/losses/: __init__.py  focal.py  weighted_mse.py
animaloc/vizual/: objects.py
build_mkdocs/: index.html
cite/: index.html
configs/test/: dla34_terrestrial.yaml  herdnet.yaml  herdnet_binary.yaml  herdnet_caribou_eval_patches_postfix.yaml  herdnet_caribou_inference_2026-05-postfix.yaml  herdnet_caribou_inference_post_fix.yaml  herdnet_loc_branch_caribou_fine_tuning.yaml  herdnet_loc_branch_caribou_fine_tuning_original_images.yaml  herdnet_loc_branch_ennedi_han_livestock_and_general_dataset_test_on_livestock.yaml  herdnet_loc_branch_further_training.yaml  herdnet_loc_branch_further_training_in_terrestrial_dataset.yaml  herdnet_loc_branch_han_livestock_and_general_dataset_test_on_general.yaml  herdnet_loc_branch_han_livestock_and_general_dataset_test_on_livestock.yaml  herdnet_loc_branch_han_livestock_finetune.yaml  herdnet_loc_branch_terrestrial_datasets.yaml  herdnet_loc_branch_terrestrial_datasets_wo_downsample.yaml  herdnet_loc_branch_terrestrial_datasets_wo_downsample_pretrained_terrestrial.yaml  herdnet_loc_branch_terrestrial_datasets_wo_downsample_wo_pretrained.yaml  herdnet_loc_branch_zero_shot_han_livestock.yaml  herdnet_replicate.yaml  herdnet_replicate_hnp.yaml  herdnet_replicate_using_weights.yaml  owlc_caribou_demo.yaml  owlc_smoketest.yaml  owld_caribou_demo.yaml  owld_s_smoketest.yaml  owlt_caribou_demo.yaml
configs/train/: dla34_terrestrial.yaml  exp_dpt_vitb_add_r12_frozen.yaml  exp_dpt_vitb_ignore_r12_frozen.yaml  exp_dpt_vitb_proj_r12_difflr.yaml  exp_dpt_vitb_proj_r12_free.yaml  exp_dpt_vitb_proj_r12_frozen.yaml  exp_dpt_vitb_proj_r1x_frozen.yaml  exp_dpt_vith_dinov3_overhead_generalized.yaml  exp_dpt_vith_focal_sum_norm_frozen.yaml  exp_dpt_vith_focal_sum_norm_frozen_benchmark.yaml  exp_dpt_vith_proj_r12_frozen.yaml  exp_dpt_vitl_focal_baseline_seed2.yaml  exp_dpt_vitl_focal_sum_norm_difflr.yaml  exp_dpt_vitl_loss_focal_baseline.yaml  exp_dpt_vitl_loss_focal_norm.yaml  exp_dpt_vitl_loss_focal_ssim.yaml  exp_dpt_vitl_loss_focal_sum_norm.yaml  exp_dpt_vitl_loss_wmse.yaml  exp_dpt_vitl_proj_r12_frozen.yaml  exp_dpt_vits_proj_r12_frozen.yaml  herdnet_hybrid_multiscale_detection_branch_final_eikelboom.yaml  herdnet_hybrid_multiscale_residual_terrestrial_datasets.yaml  herdnet_loc_branch_caribou_fine_tuning.yaml  herdnet_loc_branch_caribou_fine_tuning_aug.yaml  herdnet_loc_branch_caribou_fine_tuning_aug_lr.yaml  herdnet_loc_branch_caribou_fine_tuning_aug_sched.yaml  herdnet_loc_branch_caribou_finetuning_2026-05-postfix_aug_lr.yaml  herdnet_loc_branch_final_eikelboom.yaml  herdnet_loc_branch_further_training.yaml  herdnet_loc_branch_han_livestock_finetune.yaml  herdnet_loc_branch_han_livestock_general_dataset.yaml  herdnet_loc_branch_han_livestock_general_dataset_ennedi_weights.yaml  herdnet_loc_branch_terrestrial_datasets.yaml  herdnet_loc_branch_terrestrial_datasets_wo_downsample.yaml  herdnet_loc_branch_terrestrial_datasets_wo_downsample_pretrained_terrestrial.yaml  herdnet_loc_branch_terrestrial_datasets_wo_downsample_wo_pretrained.yaml  herdnet_loc_branch_terrestrial_subset_encoder_only_ft.yaml  herdnet_second_stage_training.yaml  owlc_smoketest.yaml  owld_s_smoketest.yaml  (+1 more)
datasets/: index.html
demo/: index.html
docs/: build_mkdocs.md  cite.md  datasets.md  demo.md  index.md  installation.md  model_zoo.md  tags.md  training.md
installation/: index.html
model_zoo/: index.html
search/: search_index.json
tags/: index.html
tests/: README.md  make_synthetic_dataset.py  smoke_forward.py  smoke_infer.sh
tools/: demo_caribou.sh  demo_owl_models.sh  infer.py  patcher.py  test.py  train.py  visualize_detections.py
training/: index.html
