[project]
name = "megadetector-overhead"
version = "0.1.0"
description = "Wildlife detection in overhead and aerial imagery (HerdNet + DINOv3 training/eval stack)."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Microsoft AI for Good Lab" },
]
keywords = ["wildlife", "drone", "aerial-imagery", "detection", "pytorch", "dinov3", "herdnet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ── Deep learning core ──────────────────────────────────────────────
    "torch>=2.0",
    "torchvision",
    "torchmetrics",

    # ── Numerical / scientific ──────────────────────────────────────────
    "numpy",
    "pandas",
    "pillow",
    "opencv-python-headless",
    "scikit-learn",
    "scikit-image",
    "matplotlib",
    "tqdm",
    "pyyaml",

    # ── Config / experiment tracking ────────────────────────────────────
    "hydra-core",
    "omegaconf",
    "wandb",

    # ── Augmentation / vision ───────────────────────────────────────────
    "albumentations",

    # ── DINOv3 transitive dependencies (also declared by dinov3/setup.py;
    #    re-declared here so uv's resolver pins them at the project level) ──
    "ftfy",
    "regex",
    "iopath",
    "submitit",
    "termcolor",

    # ── Geospatial (used by tools/patcher.py for georeferenced rasters) ──
    "rasterio",
    "geopandas",
    "fiona",
    "shapely",
    "affine",

    # ── Networking / I/O helpers used by animaloc ───────────────────────
    "huggingface-hub",
    "requests",

    # ── Vendored DINOv3 (installed editably from ./dinov3 via [tool.uv.sources]) ──
    "dinov3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
]
# ── Optional GPU builds of PyTorch ──────────────────────────────────────────
# A plain `uv sync` installs the CPU build of torch/torchvision (works on every
# machine, no GPU assumed). To use a CUDA GPU, sync ONE matching extra, e.g.:
#   uv sync --extra cu124        # CUDA 12.4 (driver >= 550); supports Volta+
#   uv sync --extra cu121        # CUDA 12.1 (driver >= 525)
#   uv sync --extra cu128        # CUDA 12.8 (driver >= 570; recent GPUs)
# Pick the highest cuXXX that is <= your driver's CUDA version
# (`nvidia-smi` → "CUDA Version"). See INSTALL.md.
cu121 = ["torch", "torchvision"]
cu124 = ["torch", "torchvision"]
cu128 = ["torch", "torchvision"]

[project.urls]
Homepage = "https://github.com/microsoft/MegaDetector-Overhead"
Documentation = "https://microsoft.github.io/MegaDetector-Overhead/"
Repository = "https://github.com/microsoft/MegaDetector-Overhead"
Issues = "https://github.com/microsoft/MegaDetector-Overhead/issues"

# ─────────────────────────────────────────────────────────────────────────────
# uv configuration: install the vendored DINOv3 from the in-tree path,
# editable, instead of resolving it from PyPI (where it does not exist).
# ─────────────────────────────────────────────────────────────────────────────
[tool.uv.sources]
dinov3 = { path = "dinov3", editable = true }
# Default to the CPU wheels; each CUDA extra overrides to its own index.
torch = [
    { index = "pytorch-cpu", marker = "extra != 'cu121' and extra != 'cu124' and extra != 'cu128'" },
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "extra != 'cu121' and extra != 'cu124' and extra != 'cu128'" },
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu128", extra = "cu128" },
]

# Explicit PyTorch indexes (only used by packages that opt in via sources above).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
# Keep the root project itself editable in the .venv so `import animaloc`
# picks up local edits without a re-sync.
package = true

# The CUDA extras are mutually exclusive — only one may be installed at a time.
conflicts = [
    [
        { extra = "cu121" },
        { extra = "cu124" },
        { extra = "cu128" },
    ],
]

# ─────────────────────────────────────────────────────────────────────────────
# Build system: setuptools is enough — we only ship the animaloc package
# from the repo root. DINOv3 has its own setup.py and is installed as a
# separate distribution from ./dinov3.
# ─────────────────────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["animaloc*"]
exclude = ["dinov3*", "tools*", "configs*", "docs*", "tests*"]

[tool.setuptools.package-data]
animaloc = ["**/*.yaml", "**/*.yml"]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff (linter / formatter) — matches the line length used by DINOv3 to keep
# style consistent across the repo.
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["dinov3"]
