[project]
name = "megadetector-overhead"
version = "0.1.0"
description = "Wildlife detection in overhead and aerial imagery (HerdNet + DINOv3 training/eval stack)."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Microsoft AI for Good Lab" },
]
keywords = ["wildlife", "drone", "aerial-imagery", "detection", "pytorch", "dinov3", "herdnet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ── Deep learning core ──────────────────────────────────────────────
    "torch>=2.0",
    "torchvision",
    "torchmetrics",

    # ── Numerical / scientific ──────────────────────────────────────────
    "numpy",
    "pandas",
    "pillow",
    "opencv-python-headless",
    "scikit-learn",
    "scikit-image",
    "matplotlib",
    "tqdm",
    "pyyaml",

    # ── Config / experiment tracking ────────────────────────────────────
    "hydra-core",
    "omegaconf",
    "wandb",

    # ── Augmentation / vision ───────────────────────────────────────────
    "albumentations",

    # ── DINOv3 transitive dependencies (also declared by dinov3/setup.py;
    #    re-declared here so uv's resolver pins them at the project level) ──
    "ftfy",
    "regex",
    "iopath",
    "submitit",
    "termcolor",

    # ── Geospatial (used by tools/patcher.py for georeferenced rasters) ──
    "rasterio",
    "geopandas",
    "fiona",
    "shapely",
    "affine",

    # ── Networking / I/O helpers used by animaloc ───────────────────────
    "huggingface-hub",
    "requests",

    # ── Vendored DINOv3 (installed editably from ./dinov3 via [tool.uv.sources]) ──
    "dinov3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
]

[project.urls]
Homepage = "https://github.com/microsoft/MegaDetector-Overhead"
Documentation = "https://microsoft.github.io/MegaDetector-Overhead/"
Repository = "https://github.com/microsoft/MegaDetector-Overhead"
Issues = "https://github.com/microsoft/MegaDetector-Overhead/issues"

# ─────────────────────────────────────────────────────────────────────────────
# PyTorch CPU / CUDA selection (uv dependency-groups).
#
# A plain `uv sync` installs the CPU build of torch/torchvision (the `cpu` group
# is the default — see [tool.uv] default-groups), so it works on any machine with
# no GPU assumptions and a small, reproducible lockfile.
#
# GPU users opt into a CUDA build that matches their NVIDIA driver, e.g.:
#   uv sync --no-default-groups --group cu121   # CUDA 12.1 (incl. Volta / V100)
#   uv sync --no-default-groups --group cu124   # CUDA 12.4
#   uv sync --no-default-groups --group cu128   # CUDA 12.8 (recent GPUs)
# Pick the highest cuXXX <= your driver's CUDA version (`nvidia-smi`). NOTE:
# Volta GPUs (e.g. Tesla V100) require cu121 — cu124/cu128 drop Volta kernels.
# The groups are mutually exclusive; only one CUDA build can be installed.
# ─────────────────────────────────────────────────────────────────────────────
[dependency-groups]
cpu = ["torch", "torchvision"]
cu121 = ["torch", "torchvision"]
cu124 = ["torch", "torchvision"]
cu128 = ["torch", "torchvision"]

# ─────────────────────────────────────────────────────────────────────────────
# uv configuration.
# ─────────────────────────────────────────────────────────────────────────────
[tool.uv]
# Keep the root project itself editable in the .venv so `import animaloc`
# picks up local edits without a re-sync.
package = true

# `cpu` is the default group: a bare `uv sync` installs the CPU PyTorch build.
default-groups = ["cpu"]

# The PyTorch builds are mutually exclusive — only one may be installed at a time.
conflicts = [
    [
        { group = "cpu" },
        { group = "cu121" },
        { group = "cu124" },
        { group = "cu128" },
    ],
]

# Resolve the lockfile for the platforms we support: 64-bit Linux, macOS, and
# 64-bit Windows. This deliberately excludes niche targets (Linux/Windows on
# ARM), whose PyTorch CPU wheels are sometimes published under odd local-version
# tags (e.g. `torchvision 0.27.1+df56172`, win_arm64-only) that otherwise hijack
# the universal resolution and leave the mainstream platforms without an
# installable wheel.
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

# Install the vendored DINOv3 from the in-tree path (editable); route torch and
# torchvision to the matching PyTorch index per dependency-group.
[tool.uv.sources]
dinov3 = { path = "dinov3", editable = true }
torch = [
    { index = "pytorch-cpu", group = "cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu121", group = "cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu124", group = "cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu128", group = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cpu", group = "cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu121", group = "cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu124", group = "cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu128", group = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

# Explicit PyTorch indexes (only used by packages that opt in via sources above,
# not for generic dependencies).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# ─────────────────────────────────────────────────────────────────────────────
# Build system: setuptools is enough — we only ship the animaloc package
# from the repo root. DINOv3 has its own setup.py and is installed as a
# separate distribution from ./dinov3.
# ─────────────────────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["animaloc*"]
exclude = ["dinov3*", "tools*", "configs*", "docs*", "tests*"]

[tool.setuptools.package-data]
animaloc = ["**/*.yaml", "**/*.yml"]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff (linter / formatter) — matches the line length used by DINOv3 to keep
# style consistent across the repo.
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["dinov3"]
